# shard

./: .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
paper/: ARXIV_REVISION_NOTES.md
paper/src/: shard.tex
spec/: composition.md  coordination.md  memory-governance.md  overview.md  self-improvement.md  skill-lifecycle.md
src/adapters/: __init__.py  base.py
src/shard/: __init__.py  composition.py  coordination.py  memory.py  safety.py  skills.py
tests/: conftest.py  test_adapters.py  test_composition.py  test_coordination.py  test_memory.py  test_safety.py  test_skills.py  test_t4_accelerated.py
