[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shard-agent"
version = "1.0.0"
description = "Composable infrastructure for governed, self-improving LLM agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Christopher Aytona" }
]
keywords = ["llm", "agents", "governance", "self-improvement", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/aytona/shard"
Documentation = "https://github.com/aytona/shard/tree/main/spec"
Repository = "https://github.com/aytona/shard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
